--- a/eas.json
+++ b/eas.json
@@ -9,7 +9,9 @@
     },
     "preview": {
       "distribution": "internal",
-      "buildType": "apk"
+      "android": {
+        "buildType": "apk"
+      }
     },
     "production": {}
   },
